--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
 }
 
-group 'co.kernelnetworks.oidc.auth.tokens'
+group 'severeone.oidc.auth.tokens'
 version '1.0'
 
 sourceCompatibility = 1.8
@@ -11,7 +11,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     flatDir {
-        dirs '../auth-tokens/build/libs'
+        dirs '../oidc-tokens/build/libs'
     }
 }
 
@@ -19,11 +19,11 @@ repositories {
     mavenCentral()
 }
 
-mainClassName = 'co.kernelnetworks.oidc.auth.tokens.keygenerator.ConsoleGenerator'
+mainClassName = 'severeone.oidc.auth.tokens.keygenerator.ConsoleGenerator'
 
 dependencies {
     compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.1'
-    compile name: 'auth-tokens-1.0'
+    compile name: 'oidc-tokens-1.0.1'
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
